<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/settingsItem"
        android:title="@string/settings_text"
        android:icon="@drawable/gear"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/logoutItem"
        android:title="@string/logout_text"
        android:icon="@drawable/logout"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/mainItem"
        android:title="@string/home"
        />
    <item
        android:id="@+id/exerciseItem"
        android:title="@string/fitness"
        />
    <item
        android:id="@+id/foodItem"
        android:title="@string/food"
        />
    <item
        android:id="@+id/funItem"
        android:title="@string/events"
        />

</menu>