<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tommymathews.slackersguidetohealth.FoodActivity"
    android:weightSum="1">

    <TextView
        android:id="@+id/calorieCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calorieIntake"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hardCodeInputCalories"
        android:inputType="number"/>

    <TextView
        android:text="@string/foodConsDets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/foodConsDets"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="@string/hardCodeInputCons"/>


    <TextView
        android:text="@string/foodAllergy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/foodAllergy"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="@string/none"/>

    <TextView
        android:text="@string/dietPlanDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dietPlanDetails"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="@string/hardCodeInputDiet"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextPageFood"
        android:id="@+id/nextPageFood"/>

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal">

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:itemBackground="@color/orange"
            app:itemIconTint="@color/white"
            app:itemTextColor="@color/white"
            app:menu="@menu/menu_navigation" />

    </LinearLayout>


</LinearLayout>