<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/margins">

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/create_title"
            android:text="@string/create_fitness_title"
            style="@style/FontAndSizeTitle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fitness_name"
            android:text="@string/fitness_name" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/fitness_name_edit"
            style="@style/FontAndSizeInstructions"
            android:hint="@string/fitness_name_sample" />

        <TextView
            android:text="@string/body_part"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/body_part" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_fitness"
            style="@style/FontAndSizeInstructions" />

        <TextView
            android:text="@string/num_reps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/num_reps" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/num_reps_edit"
            style="@style/FontAndSizeInstructions"
            android:hint="@string/num_reps_sample" />

        <TextView
            android:text="@string/instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/instructions" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/instructions_edit"
            style="@style/FontAndSizeInstructions"
            android:hint="@string/instructions_sample" />

        <TextView
            android:text="@string/photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/photo_workout" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="76dp">

            <ImageView
                android:id="@+id/photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="0.00"
                app:srcCompat="@color/black_overlay" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_menu_camera"
                android:id="@+id/camera"
                android:layout_weight="0.00" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="@string/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cancel_fitness_button"
                style="@android:style/Widget.Button"
                android:layout_marginStart="51dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                />

            <Button
                android:text="@string/create_fitness_steps_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/create_fitness_steps"
                style="@android:style/Widget.Button"
                android:layout_marginEnd="62dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>
