<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/margins"
    tools:context="com.tommymathews.slackersguidetohealth.SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:ems="10"
            android:hint="@string/prompt_name"
            android:inputType="textPersonName"
            android:paddingTop="15dp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingTop="15dp"/>

        <EditText
            android:id="@+id/pass_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/email"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:paddingTop="15dp"/>

        <EditText
            android:id="@+id/pass_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pass_one"
            android:ems="10"
            android:hint="@string/prompt_confirm_password"
            android:inputType="textPassword"
            android:paddingTop="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender" />


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/gender_radio_group">

            <RadioButton
                android:id="@+id/male_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/male_button"
                android:layout_weight="1"
                android:text="@string/gender_male" />

            <RadioButton
                android:id="@+id/female_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_weight="1"
                android:text="@string/gender_female" />
        </RadioGroup>

        <RelativeLayout
            android:id="@+id/age_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/weight_layout"
            android:paddingTop="15dp">

            <SeekBar
                android:id="@+id/seekbar_age"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_below="@+id/age_title"
                android:max="36" />

            <TextView
                android:id="@+id/age_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age" />

            <TextView
                android:id="@+id/txt_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/age_title"
                android:layout_toRightOf="@+id/seekbar_age"
                android:gravity="center_vertical|center_horizontal" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/weight_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/pass_confirm"
            android:paddingTop="15dp">

            <TextView
                android:id="@+id/weight_display_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignTop="@+id/weight_bar"
                android:layout_toEndOf="@+id/weight_bar"
                android:gravity="center_horizontal" />

            <SeekBar
                android:id="@+id/weight_bar"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/weight_title"
                android:max="200"/>

            <TextView
                android:id="@+id/weight_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/height_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/weight_layout"
            android:paddingTop="15dp">

            <SeekBar
                android:id="@+id/seekbar_height"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_below="@+id/height_title"
                android:max="36"/>

            <TextView
                android:id="@+id/height_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"/>

            <TextView
                android:id="@+id/txt_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/height_title"
                android:layout_toRightOf="@+id/seekbar_height"
                android:gravity="center_vertical|center_horizontal" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/goal" />

        <Spinner
            android:id="@+id/goal_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/height_layout"
            android:entries="@array/workout_levels"
            android:paddingTop="15dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/back_button"
                style="@android:style/Widget.Button" />

            <Button
                android:id="@+id/btn_save_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/save_settings_button"
                style="@android:style/Widget.Button" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>
