<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:design="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/margins">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/foodPic"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/eggplant"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/recipeIdea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipeIdea"
        android:layout_gravity="center"
        style="@style/FontAndSizeTitle"/>

        <TextView
            android:id="@+id/foodSuggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foodSuggestion"
            android:textColor="@color/black"
            design:ignore="RtlHardcoded"
            android:layout_alignBottom="@+id/foodPic"
            android:layout_marginBottom="18dp" />

    <TextView
        android:id="@+id/ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredients"
        style="@style/FontAndSizeInstructions"
        />

    <TextView
        android:id="@+id/process"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/process"
        style="@style/FontAndSizeInstructions" />

    </LinearLayout>
</ScrollView>