<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/margins"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="30sp"
        android:id="@+id/description_title"
        android:text="@string/exerciseTitle" />

    <ImageView
        android:id="@+id/description_image"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/abs" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"

        android:id="@+id/description_label"
        android:text="@string/descTitle" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/description_text"
        android:text="@string/descriptionEx"
        android:layout_weight="0.82" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <Button
            android:id="@+id/back_to_fitness_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descriptBack"
            android:layout_weight="1.0"
            style="@android:style/Widget.Button" />

        <Button
            android:id="@+id/look_at_fitness_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stepsDirs"
            android:layout_weight="1.0"
            style="@android:style/Widget.Button" />


    </LinearLayout>

</LinearLayout>